# core-ai-application

./: .gitignore  main.py  pyproject.toml
.github/: ci.yml  copilot-instructions.md
core/: settings.py
models/: database_model.py
services/: data_injection_service.py  data_loader_service.py  data_search_service.py  database_service.py
